istio/circuit-breaker/destination-rule-server.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: server-destination-rule
spec:
  host: server.default.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 15
      http:
        http2MaxRequests: 1
