istio/circuit-breaker/sidecar-circuit-breaker.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: app-b-sidecar
spec:
  workloadSelector:
    labels:
      app: app-b 
  inboundConnectionPool:
    tcp:
      idleTimeout: 1s
      connectTimeout: 1ms
      maxConnectionDuration: 1ms
    http:
      http2MaxRequests: 5
      idleTimeout: 1ms
